samba (3.0.20b-4) UNRELEASED; urgency=low

  * Remove the smbldap-tools-* directory from the examples of samba-doc
    as these tools exist as an independent package. Closes: #341934
  * Swedish debconf translation update. Closes: #342022
  * Preserve the local admin settings for run_mode in /etc/default/samba
    when upgrading. Closes: #234038, #267988, #269735

 -- Christian Perrier <bubulle@debian.org>  Sun, 11 Dec 2005 09:46:58 +0100

samba (3.0.20b-3) unstable; urgency=low

  [ Steve Langasek ]
  * Drop the FHS transition code from the samba postinst, since it's
    not needed for upgrades from sarge (and most of it not for upgrades
    from woody).

  [ Noèl Köthe ]
  * libpam-smbpass dependency on samba-common
    Closes: #297923
  * Updated swedish debconf translation. Closes: #335784
  * Added Recommends: smbldap-tools. Closes: #227675

  [ Peter Eisentraut ]
  * Added doc-base support. Closes: #55580
  * Fixed dh_installexamples call so the debian/*.examples files are
    actually used.
  * Patched libpam-smbpass README to refer to examples directory.
    Closes: #215771

  [ Christian Perrier ]
  * Add a working passwd chat line to the default smb.conf file
    Closes: #269746
  * Add the profiles binary and man page to the shipped files. Closes: #225494
  * Add a dependency on samba-common for winbind and force versions to match
    Closes: #273007, #264855
  * Add /var/log/samba to winbind directories. Closes: #340833
  * Lintian cleaning:
    - Add a few lintian overrides to avoid lintian complaining
      for things done on purpose or just because it makes wrong assumptions
    - Corrected FSF address in debian/copyright
    - Make swat depend on netbase as it uses update-inetd in its postinst
      script
    - Correct shebang lines in config scripts
    - Remove an extra copy of the GPL in smbldap-tool examples in samba-doc
    - Minor correction in libsmbclient-dev description to avoid strictly