@@ -28,6 +28,7 @@ Description: a LanManager-like file and printer server for Unix
   smbclient - LanManager-like simple client for Unix.
   swat - Samba Web Administration Tool
   samba-doc - Samba documentation.
+  samba-doc-pdf - Samba documentation in PDF format.
   smbfs - Mount and umount commands for the smbfs (kernels 2.2.x and above).
   libpam-smbpass - pluggable authentication module for SMB password database
   libsmbclient - Shared library that allows applications to talk to SMB servers
@@ -74,8 +75,7 @@ Description: a LanManager-like simple client for Unix
 
 Package: swat
 Architecture: any
-Depends: samba (= ${Source-Version}), ${shlibs:Depends}, ${misc:Depends}, netbase
-Recommends: samba-doc
+Depends: samba (= ${Source-Version}), samba-doc (= ${Source-Version}), ${shlibs:Depends}, ${misc:Depends}, netbase
 Description: Samba Web Administration Tool
  The Samba software suite is a collection of programs that
  implements the SMB protocol for unix systems, allowing you to serve
@@ -84,9 +84,6 @@ Description: Samba Web Administration Tool
  .
  This package contains the components of the Samba suite that are needed
  for Web administration of the Samba server.
- .
- Note: if you want to use the on-line documentation that is accesible
- through the Swat front-end you must install the samba-doc package.
 
 Package: samba-doc
 Section: doc
@@ -98,7 +95,19 @@ Description: Samba documentation
  is sometimes also referred to as the LanManager or NetBIOS protocol.
  .
  This package contains all the documentation that comes in the original
- tarball.
+ tarball, except in PDF format.
+
+Package: samba-doc-pdf
+Section: doc
+Architecture: all
+Description: Samba documentation (PDF format)
+ The Samba software suite is a collection of programs that
+ implements the SMB protocol for unix systems, allowing you to serve
+ files and printers to Windows, NT, OS/2 and DOS clients. This protocol
+ is sometimes also referred to as the LanManager or NetBIOS protocol.
+ .
+ This package contains all the documentation that comes in the original
+ tarball in PDF format.
 
 Package: smbfs
 Section: otherosfs
