@@ -1,7 +1,4 @@
 README
-docs/Samba3-ByExample.pdf
-docs/Samba3-Developers-Guide.pdf
-docs/Samba3-HOWTO.pdf
 docs/THANKS
 docs/history
 docs/htmldocs/
